# network_study_one_project

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/communication/: common_message.rs
common/src/logic/: input_parser.rs
server/: Cargo.toml
server/src/: channel_message.rs  main.rs
src/client/: main.rs
src/common/: lib.rs
src/common/communication/: common_message.rs  mod.rs
src/common/logic/: input_parser.rs
src/server/: channel_message.rs  main.rs
