[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
uuid = { version = "1.13.1", features = ["v4"] }
serde_json = "1.0.138"

[lib]
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"